# taxi-backend

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  start.sh
app/: create_app.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_11_19_0912-b33adcab6f6d_add_user_table.py
app/api/: __init__.py  error_handlers.py
app/api/auth/: router.py  service.py
app/core/: config.py
app/core/db/: __init__.py  helper.py
app/core/dependencies/: __init__.py  auth.py  db.py
app/core/exceptions/: __init__.py  auth.py  base.py  kc.py
app/core/models/: __init__.py  base.py  driver.py  order.py  user.py  zone.py
app/core/schemas/: auth.py  user.py
app/crud/: __init__.py  base.py  user.py
app/services/keycloak/: __init__.py  client.py
